--- a/package.json
+++ b/package.json
@@ -1,7 +1,29 @@
 {
+  "author": {
+    "name": "Marichka0701",
+    "email": "tanechnyk.marichka07@gmail.com"
+  },
+  "license": "MIT",
+  "description": "My Electron application description",
+  "homepage": "./",
+  "build": {
+    "appId": "com.app.id",
+    "productName": "React App",
+    "files": [
+      "build/**/*",
+      "electron/main.js",
+      "package.json"
+    ],
+    "extends": null,
+    "win": {
+      "sign": "./sign.js",
+      "target": "nsis-web"
+    }
+  },
   "name": "dron",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -15,22 +37,34 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
+    "concurrently": "^8.2.2",
+    "electron-is-dev": "^2.0.0",
     "firebase": "^9.22.2",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-map-gl": "^7.0.25",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.9.0",
     "styled-components": "^5.3.11",
     "three": "^0.153.0",
-    "web-vitals": "^2.1.4"
+    "wait-on": "^7.0.1",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "react-scripts build",
+    "build-electron": "react-scripts build",
+    "electron:start": "conc3eleurrently \"yarn start\" \"wait-on http://localhost:3001 && electron .\"",
+    "electron:build": "yarn build-electron && electron-builder build --publish never",
+    "electron:build:all": "yarn build-electron && electron-builder build --publish never -mwl"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +90,8 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "electron": "^27.0.2",
+    "electron-builder": "^24.6.4",
     "sass": "^1.69.4"
   }
 }
